--- a/NotepadPlusPlus/Views/ReplaceWindow.xaml
+++ b/NotepadPlusPlus/Views/ReplaceWindow.xaml
@@ -7,36 +7,53 @@
         xmlns:viewModels="clr-namespace:NotepadPlusPlus.ViewModels"
         d:DataContext="{d:DesignInstance Type=viewModels:ReplaceViewModel}"
         mc:Ignorable="d"
-        Title="ReplaceWindow" Height="190" Width="450" WindowStartupLocation="CenterScreen">
-    <Grid>
-      <TextBox Text="{Binding ValueToBeReplacedOnce}"
-               Width="200"
-               Height="20"
-               HorizontalAlignment="Center"
-               VerticalAlignment="Top"
-               Margin="70,4,0,0">
-      </TextBox>
-      <Label Content="Input a value to replace: " 
-             HorizontalAlignment="Left"
-             VerticalAlignment="Top"
-             Height="40">
-      </Label>
-      <TextBox Text="{Binding NewValueOnce}"
-               Width="200"
-               Height="20"
-               HorizontalAlignment="Center"
-               Margin="70,0,0,70">
-      </TextBox>
-      <Label Content="The new value:"
-             HorizontalAlignment="Left"
-             Margin="0,32,0,0">
-      </Label>
-      <Button Content="Replace"
+        Title="Replace" 
+        SizeToContent="WidthAndHeight" 
+        WindowStartupLocation="CenterScreen">
+    <StackPanel>
+        <StackPanel Orientation="Horizontal">
+          
+          <Label Content="Input a value to replace: " 
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Top"
+                 Width="150"
+                 Height="30"
+                 Margin="5">
+          </Label>
+          <TextBox Text="{Binding ValueToBeReplacedOnce}"
+                   Margin="5,10,5,5"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Top"
+                   Height="20"
+                   Width="150">
+          </TextBox>
+        </StackPanel>
+
+        <StackPanel Orientation="Horizontal">
+          
+          <Label Content="The new value:"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Top"
+                 Margin="5"
+                 Height="30"
+                 Width="150">
+          </Label>
+          <TextBox Text="{Binding NewValueOnce}"
+                   Margin="5,10,5,5"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Top"
+                   Height="20"
+                   Width="150">
+          </TextBox>
+        </StackPanel>
+      
+      <Button Margin="0,20,0,20"
+              Content="Replace"
               Height="20"
               Width="55"
               VerticalAlignment="Bottom"
               HorizontalAlignment="Center"
               Click="ReplaceButtonClick">
       </Button>
-    </Grid>
+    </StackPanel>
 </Window>
